# ho-lok-ue-tools

./: .gitignore  .prettierrc.json  .stylelintrc.json  404.html  ChatGPT_Consult.html  README.md  STS-01_功能測試環境建置作業指引.html  db.sqlite3  guide_poetry.html  hangi.ccc.tw.local.conf  index.html  launch.json  output.txt  package-lock.json  package.json  package_bak.json  pyproject.toml  setup.cfg  web_app_uwsgi.ini  中國哲學書電子化計劃．查字網頁解構.html
.github/workflows/: deploy.yml  plantuml.yaml  vuepress-deploy.yaml
_ManjaroKDE/: Manjaro_KDE_Guideline.html  VirtualBox_Guest.html  index.html  lua.html  neovim.html  nodejs.html  nvcode.html  python.html  ssh.html  terminal.html  tmux.html  vim.html  yay.html
_ManjaroKDE/D01_OS/: index.html
_ManjaroKDE/D02_Terminal/: index.html
_ManjaroKDE/D03_DevEnvironments/: index.html
_ManjaroKDE/D04_DevTools/: index.html
_ManjaroKDE/_templates/: GuideLine.html
_debug/: parse_huan_tshiat.html
_my_dev_env/: index.html  tags.html
_my_dev_env/ArchLinux/: ArchLinux_Django_Project.html  ArchLinux_Gnome桌面環境安裝指引.html  ArchLinux_Google-Chrome安裝指引.html  ArchLinux_Install_XRDP.html  ArchLinux_KDE桌面環境安裝指引.html  ArchLinux_Tmux安裝指引.html  ArchLinux_Vim安裝指引.html  ArchLinux_VirtualBox_Guest_Additions_Guideline.html  ArchLinux_gnome_terminal_終端機設定指引.html  ArchLinux_yay套件管理器操作指引.html  ArchLinux_中文作業環境安裝指引.html  ArchLinux_作業系統安裝指引_使用EUFI開機.html  ArchLinux_作業系統安裝指引_使用傳統硬碟開機.html  ArchLinux_開發作業環境安裝指引.html  ArchLinux_開發環境安裝指引.html  Arch_Linux_安裝作業.html  __ArchLinux_編輯器安裝指引.html  index.html
_my_dev_env/Debian/: Aspire_5745G_升級到_Ubuntu_20_04.html  Debian_FAQ.html  Debian_Install_Lua.html  Gnome_Vino_VNC_Server.html  How_to_install_Davinci_Resolve_16_on_Ubuntu_20_04.html  MS_SQL_Server_2017_for_Linux.html  NPM安裝疑難雜症.html  USB_藍牙+Wi-Fi_二合一無線網路卡安裝.html  Ubuntu-Build_Dev_Platform.html  Ubuntu-Install_Nginx_as_HTTP_Server.html  Ubuntu-Install_Postgres_DB_Server.html  Ubuntu-Install_Postgres_DB_Server（Backup）.html  Ubuntu-Install_Python_Platform.html  Ubuntu-Install_SIT_Server-Build_DjangoApp_Platform.html  Ubuntu-Install_SIT_Server-DB_Server.html  Ubuntu-Install_SIT_Server-Initial.html  Ubuntu-Install_SIT_Server.html  Ubuntu-Nginx.html  Ubuntu-NodeJS.html  Ubuntu-Python.html  Ubuntu-uWSGI.html  Ubuntu_16_04_安裝_Django_Platform(uWSGI).html  Ubuntu_16_04_急救包.html  Ubuntu_16_04_軟體安裝清單.html  Ubuntu_16_04安裝PostgreSQL_9_6.html  Ubuntu_16_04硬碟分割.html  Ubuntu_18_04_+_xRDP.html  Ubuntu_18_04_4_VM_Setup_for_DEV.html  Ubuntu_18_04_安裝_DaVinci_Resolve_16_2.html  Ubuntu_18_04_安裝_Mail_Server.html  Ubuntu_18_04_安裝_macOS_UI.html  Ubuntu_18_04_安裝筆記.html  Ubuntu_18_04_更新顯示卡驅動程式.html  Ubuntu_18_04_遠端連線.html  Ubuntu_18_04_音效系統設定及管理.html  Ubuntu_QEMU_KVM_Libvirt.html  Ubuntu_Samba_Server_安裝指引.html  Ubuntu_疑難雜症處置法.html  Ubuntu資料備份.html  apt-get_upgrade用法與時機.html  (+13 more)
_my_dev_env/MBP-2018/: Deploy_Vuepress_to_GitHub.html  MacBookPro_Django_guideline.html  MacBookPro_Python_guideline.html  MacBookPro_lua_guideline.html  MacBookPro_nodejs_guideline.html  index.html
_my_dev_env/NVCode/: NVCode-1.html  NVCode.html  NVCode_for_ArchLinx.html  NVCode_for_Debian.html  NVCode_for_Mac.html  NVCode_for_Ubuntu.html  index.html
_my_dev_env/QuickRef/: index.html
_my_dev_env/VSCode/: VS_Code_Vim.html  VS_Code_Vim_Setting.html  index.html
_my_dev_env/VirtualBox/: index.html
_my_dev_env/_templates/: GuideLine.html
_my_dev_env/django/: Ajax_post_to_Django.html  Debian_10_設定.html  Django_Quick_Guide.html  Nvim_+_Tmux_打造_Django_開發環境.html  PIPENV筆記本.html  Python_與_Django_速查指令.html  index.html  pyenv_與_django.html  vagrant_+_pyenv_+_pipenv_+_postgres.html  佈署_Django_2_App_上_Heroku.html  (+4 more)
api/: urls.py  views.py
article_pronunciation/: apps.py  forms.py  lib_huan_tshiat_huat.py  lib_tsa_huan_tshiat.py  models.py  urls.py  views.py
config/: index.html
d100_URS/: d100_fn001.html  d100_fn002.html  d100_fn003.html  d100_fn004.html  index.html
d200_SRS/: index.html
d300_SDD/: index.html
d400_DEV/: STS.html  d411_開發環境建置作業.html  d412_01_漢字字典資料庫建置作業-SQLite.html  d412_漢字字典資料庫建置作業.html  d421_軟體單元測試作業.html  d422_軟體整合測試作業.html  d431_系統測試規格.html  d432_系統測試作業.html  d441_使用者驗收測試環境建置作業.html  d443-001-TestCase.html  index.html
d500_OP/: README_BAK.html  d500_run_time_platform.html  d510_Build_Server.html  d520_Update.html  doc_lib.html  index.html  ref.html
d900_REF/: ChatGPT_Consult.html  Markdownlint_Std.html  git.html  index.html  luarocks_guide.html
docs/: 404.html  ChatGPT_Consult.html  ChatGPT_Consult.md  README.md  STS-01_功能測試環境建置作業指引.html  guide_poetry.html  guide_poetry.md  index.html  nga_siok_thong_sip_ngoo_im_POJ.xlsx  洪武正韻.xlsx  漢文注音工具.xlsx  閩南語拼音對照表.xlsx  中國哲學書電子化計劃．查字網頁解構.html  中國哲學書電子化計劃．查字網頁解構.md
guide/: index.html  lua_configuration_on_mac.html  lua_project_guide.html  mypy-guideline.html  using-vue.html
han_ji_dict/: add_data_to_hanji_dict.py  admin.py  apps.py  ban_phing_lo_ma_ji.py  fong_yim_fu_ho.py  forms.py  models.py  peh_oe_ji.py  sip_ngoo_im.py  tai_uan_lo_ma_ji.py  test2.py  tests.py  urls.py  views.py
libs/: result.html  test_ctest_api_01.py
templates/: base.html  footer.html
tests/: __init__.py
tools/: convert_list_to_dict.py  dict.txt  han_ji.csv  import_csv.py  import_csv_drop_old_table.py  import_csv_file_into_han_ji_dict_table.py  import_csv_to_han_ji_dict.py  print_unicode.py  reset_han_ji_dict_table.py  setenv.py  sip_ngoo_im_convert.py  sip_ngoo_yim_mapping.txt  水調歌頭【BP注音】.docx  水調歌頭【台語方音輸入法】.docx  水調歌頭【雅俗通．文讀書．類閩拼】.docx
web_app/: settings.py  urls.py
(+1842 files in other folders)
